# papyrus

./: .gitignore  README.md  dune-project  flake.nix  papyrus.opam
lib/: build.ml  cmd.ml  config.ml  defaults.ml  dev.ml  dune  html.ml  init.ml  pp.ml  utils.ml
test/: dune
